<resources>
    <string name="app_name">Android-213</string>

    <string name="main_tv_title">Знайомство з Android</string>
    <string name="main_btn_calc">Калькулятор</string>
    <string name="main_btn_game">Жесты. Игра.</string>
    <string name="main_btn_anim">Анимации</string>
    <string name="main_btn_rate">Курсы валют</string>

    <!-- region Calculator   -->

    <string name="calc_tv_title">Калькулятор</string>
    <string name="calc_btn_0">0</string>
    <string name="calc_btn_1">1</string>
    <string name="calc_btn_2">2</string>
    <string name="calc_btn_3">3</string>
    <string name="calc_btn_4">4</string>
    <string name="calc_btn_5">5</string>
    <string name="calc_btn_6">6</string>
    <string name="calc_btn_7">7</string>
    <string name="calc_btn_8">8</string>
    <string name="calc_btn_9">9</string>
    <string name="calc_btn_percent">%</string>
    <string name="calc_btn_ce">CE</string>
    <string name="calc_btn_c">C</string>
    <string name="calc_btn_backspace">\u232b</string>
    <string name="calc_btn_inv">⅟x</string>
    <string name="calc_inv_tpl">1 / (%s) =</string>
    <string name="calc_btn_sqr">x²</string>
    <string name="calc_btn_sqrt">√x</string>
    <string name="calc_btn_div">÷</string>
    <string name="calc_btn_mul">×</string>
    <string name="calc_btn_sub">−</string>
    <string name="calc_btn_add">+</string>
    <string name="calc_btn_equal">=</string>
    <string name="calc_btn_dot">,</string>
    <string name="calc_btn_pm">±</string>
    <string name="calc_err_div_zero">Деление на 0</string>
    <string name="calc_err">Ошибка</string>


    <string name="calc_btn_memory_clear">MC</string>  <!-- Очистить память -->
    <string name="calc_btn_memory_recall">MR</string>  <!-- Вызвать значение из памяти -->
    <string name="calc_btn_memory_plus">M+</string>  <!-- Добавить к значению в памяти -->
    <string name="calc_btn_memory_minus">M−</string>  <!-- Вычесть из значения в памяти -->
    <string name="calc_btn_memory_store">MS</string>  <!-- Сохранить в память -->
    <string name="calc_btn_memory_dropdown">M∨</string>  <!-- Выпадающий список памяти -->
    <!-- endregion -->

    <!-- regin Game -->
    <string name="game_tv_title">2048</string>
    <string name="game_tv_hint">Join the numbers and get to the 2048 tile!</string>
    <string name="game_btn_new">NEW</string>
    <string name="game_btn_undo">UNDO</string>
    <string name="game_tv_score_tpl">SCORE\n%s</string>
    <string name="game_tv_best_tpl">BEST\n%s</string>
    <!--    endregion-->

    <string name="anim_tv_alpha">Alpha</string>
    <string name="anim_tv_scale">Scale</string>
    <string name="anim_tv_rotate">Rotate</string>
    <string name="anim_tv_translate">Translate</string>

    <string name="rate_load_fail">Произошла ошибка загрузки</string>
    <string name="rate_sv_description">Все курсы валют</string>
    <string name="rate_btn_close_description">Закрыть окно</string>

    <string name="rate_info">
    Полное название: %1$s\nСокращённое название: %2$s\nКод r030: %3$d\nКурс на %4$s: 1 %2$s = %5$.4f HRN
    </string>
    <string name="rate_field_choose_date">Выберите дату</string>
    <string name="rate_field_search">Поиск по названию или коду</string>


    <string name="main_btn_chat">Чат</string>
    <string name="chat_tv_author">Автор</string>
    <string name="chat_tv_message">Текст:</string>
    <string name="chat_tv_message_hint">Сообщение в чат</string>
    <string name="chat_iv_bell_description">Новое уведомление</string>
    <string name="chat_msg_empty_author">Введите своё имя</string>
    <string name="chat_msg_empty_message">Введите сообщение</string>


</resources>