<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_layout_bg"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_tv_title"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_tv_title"
        app:layout_constraintWidth_percent="0.65">


        <Button
            android:id="@+id/main_btn_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/main_btn_calc"
            android:backgroundTint="@color/main_btn_bg"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>
<!--            android:backgroundTint="@null"-->

        <Button
            android:id="@+id/main_btn_anim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/main_btn_anim"
            android:backgroundTint="@color/main_btn_bg"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/main_btn_game"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/main_btn_game"
            android:backgroundTint="@color/main_btn_bg"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />
<!--            android:backgroundTint="@null" -->

        <Button
            android:id="@+id/main_btn_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/main_btn_rate"
            android:backgroundTint="@color/main_btn_bg"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <Button
            android:id="@+id/main_btn_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/main_btn_chat"
            android:backgroundTint="@color/main_btn_bg"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>